src/objects/Web_Content__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Web Contents</relationshipLabel>
        <relationshipName>Web_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_since__c</fullName>
        <description>How long has your business been running?</description>
        <inlineHelpText>How long has your business been running?</inlineHelpText>
        <label>Business since</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <description>What/Who are your main competitors?</description>
        <inlineHelpText>What/Who are your main competitors?</inlineHelpText>
        <label>Competitor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Questionnaire Email</description>
        <inlineHelpText>Email Address</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Main_audiences__c</fullName>
        <description>Main audiences</description>
        <inlineHelpText>Main audiences</inlineHelpText>
        <label>Main audiences</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Main_industry__c</fullName>
        <description>What is the main industry you operate in?</description>
        <inlineHelpText>What is the main industry you operate in?</inlineHelpText>
        <label>Main industry</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <description>What are your key website objectives?</description>
        <inlineHelpText>What are your key website objectives?</inlineHelpText>
        <label>Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFDC_Projects__c</referenceTo>
        <relationshipLabel>Web Contents</relationshipLabel>
        <relationshipName>Web_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selling_Point__c</fullName>
        <description>What are your key selling points?</description>
        <inlineHelpText>What are your key selling points?</inlineHelpText>
        <label>Selling Point</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Slogan__c</fullName>
        <description>Key message</description>
        <inlineHelpText>Key message</inlineHelpText>
        <label>Slogan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_location__c</fullName>
        <description>What is your target location?</description>
        <inlineHelpText>What is your target location?</inlineHelpText>
        <label>Target location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Website_URL__c</fullName>
        <description>Website URL</description>
        <inlineHelpText>Website URL</inlineHelpText>
        <label>Website URL</label>
        <type>Url</type>
    </fields>
    <label>Web Content</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Slogan__c</columns>
        <columns>Website_URL__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WC-{00000}</displayFormat>
        <label>Web Content Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>